2016-12-07         [RELEASE] Release of youtube 1.0.0 (Nicole Cordes)
2016-12-07 04c8375 [FEATURE] Add MediaGallery partial (Nicole Cordes)
2016-12-07 e644371 [FEATURE] Add TypoScript to add lib.fluidContent.partialRootPaths (Nicole Cordes)
2016-12-07 53aea64 [TASK] Add basic extension information (Nicole Cordes)